Fix some things about the WFC